k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SDO
spec:
  selector:
    app: SDO
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
