k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdo
spec:
  rules:
  - host: sdo.38.cc.ucll.cloud  # Update with your desired domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sdo
            port:
              number: 80
